[package]
name = "map-thing-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
clap = { version = "4.4.11", features = ["derive", "env"] }
dotenvy = "0.15.7"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
